logs/ndg-saml.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ndg'...
Listing './lib/python3.5/site-packages/ndg/saml'...
Listing './lib/python3.5/site-packages/ndg/saml/common'...
Listing './lib/python3.5/site-packages/ndg/saml/saml2'...
Listing './lib/python3.5/site-packages/ndg/saml/saml2/binding'...
Listing './lib/python3.5/site-packages/ndg/saml/saml2/binding/soap'...
Listing './lib/python3.5/site-packages/ndg/saml/saml2/binding/soap/client'...
Compiling './lib/python3.5/site-packages/ndg/saml/saml2/binding/soap/client/attributequery.py'...
***   File "./lib/python3.5/site-packages/ndg/saml/saml2/binding/soap/client/attributequery.py", line 132
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ndg/saml/saml2/binding/soap/client/authzdecisionquery.py'...
***   File "./lib/python3.5/site-packages/ndg/saml/saml2/binding/soap/client/authzdecisionquery.py", line 123
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ndg/saml/saml2/binding/soap/client/xacmlauthzdecisionquery.py'...
***   File "./lib/python3.5/site-packages/ndg/saml/saml2/binding/soap/client/xacmlauthzdecisionquery.py", line 118
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/saml/saml2/binding/soap/server'...
Listing './lib/python3.5/site-packages/ndg/saml/saml2/binding/soap/server/wsgi'...
Compiling './lib/python3.5/site-packages/ndg/saml/saml2/binding/soap/server/wsgi/queryinterface.py'...
***   File "./lib/python3.5/site-packages/ndg/saml/saml2/binding/soap/server/wsgi/queryinterface.py", line 35
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/saml/test'...
Listing './lib/python3.5/site-packages/ndg/saml/test/binding'...
Listing './lib/python3.5/site-packages/ndg/saml/test/binding/soap'...
Compiling './lib/python3.5/site-packages/ndg/saml/test/binding/soap/test_queryresponseinterface.py'...
***   File "./lib/python3.5/site-packages/ndg/saml/test/binding/soap/test_queryresponseinterface.py", line 66
    print soapRequest.prettyPrint()
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ndg/saml/test/test_saml.py'...
***   File "./lib/python3.5/site-packages/ndg/saml/test/test_saml.py", line 263
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/saml/test/xml'...
Compiling './lib/python3.5/site-packages/ndg/saml/test/xml/test_xacml_profile.py'...
***   File "./lib/python3.5/site-packages/ndg/saml/test/xml/test_xacml_profile.py", line 47
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/saml/utils'...
Compiling './lib/python3.5/site-packages/ndg/saml/utils/command_line_client.py'...
***   File "./lib/python3.5/site-packages/ndg/saml/utils/command_line_client.py", line 377
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ndg/saml/utils/factory.py'...
***   File "./lib/python3.5/site-packages/ndg/saml/utils/factory.py", line 136
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ndg/saml/utils/m2crypto.py'...
***   File "./lib/python3.5/site-packages/ndg/saml/utils/m2crypto.py", line 294
    except Exception, excep:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/saml/xml'...
Listing './lib/python3.5/site-packages/ndg/soap'...
Compiling './lib/python3.5/site-packages/ndg/soap/client.py'...
***   File "./lib/python3.5/site-packages/ndg/soap/client.py", line 303
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/soap/server'...
Listing './lib/python3.5/site-packages/ndg/soap/server/wsgi'...
Compiling './lib/python3.5/site-packages/ndg/soap/server/wsgi/zsi.py'...
***   File "./lib/python3.5/site-packages/ndg/soap/server/wsgi/zsi.py", line 288
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/soap/test'...
Compiling './lib/python3.5/site-packages/ndg/soap/test/test_soap.py'...
***   File "./lib/python3.5/site-packages/ndg/soap/test/test_soap.py", line 116
    except SOAPFaultException, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/soap/utils'...
Listing './lib/python3.5/site-packages/ndg_saml-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
